plugins {
  id "java"
  id "org.springframework.boot" version "3.1.4"
  id "io.spring.dependency-management" version "1.1.3"

  // Code quality plugins
  id "checkstyle"
  id "jacoco"
  id "org.sonarqube" version "4.4.1.3373"
}

group = "uk.nhs.tis.trainee"
version = "0.22.0"

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4"
    mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.0.2"
  }
}

dependencies {
  // Spring Boot starters
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  implementation "org.springframework.boot:spring-boot-starter-data-redis"
  implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
  implementation "org.springframework.boot:spring-boot-starter-web"
  implementation "org.springframework.boot:spring-boot-starter-validation"
  testImplementation "org.springframework.boot:spring-boot-starter-test"

  // Lombok
  compileOnly "org.projectlombok:lombok"
  annotationProcessor "org.projectlombok:lombok"

  // MapStruct
  ext.mapstructVersion = "1.5.5.Final"
  implementation "org.mapstruct:mapstruct:${mapstructVersion}"
  annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
  testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  // Sentry reporting
  ext.sentryVersion = "6.30.0"
  implementation "io.sentry:sentry-spring-boot-starter:$sentryVersion"
  implementation "io.sentry:sentry-logback:$sentryVersion"

  // Amazon SQS
  implementation "io.awspring.cloud:spring-cloud-aws-starter-sns"
  implementation "io.awspring.cloud:spring-cloud-aws-starter-sqs"

  //AWS X-ray
  implementation "com.amazonaws:aws-xray-recorder-sdk-spring:2.14.0"

  implementation "commons-codec:commons-codec:1.16.0"

  ext.jjwtVersion = "0.11.5"
  implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
  implementation "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
  runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"

  testImplementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
  testImplementation "com.playtika.testcontainers:embedded-redis:2.3.2"
  testImplementation "org.testcontainers:junit-jupiter:1.19.1"
}

checkstyle {
  config = resources.text.fromArchiveEntry(configurations.checkstyle[0], "google_checks.xml")
}

jacocoTestReport {
  reports {
    html.required = true
    xml.required = true
  }
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
    vendor = JvmVendorSpec.ADOPTIUM
  }
}

sonarqube {
  properties {
    property "sonar.host.url", "https://sonarcloud.io"
    property "sonar.login", System.getenv("SONAR_TOKEN")
    property "sonar.organization", "health-education-england"
    property "sonar.projectKey", "Health-Education-England_tis-trainee-credentials"

    property "sonar.java.checkstyle.reportPaths",
      "build/reports/checkstyle/main.xml,build/reports/checkstyle/test.xml"
  }
}

test {
  finalizedBy jacocoTestReport
  useJUnitPlatform()
}
